<resources>
    <string name="app_name">DemoAndroidApp</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="or_n_login_register">Or \n Login/Register</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="user_name"><font size="14">User Name</font></string>
    <string name="email">Email</string>
    <string name="number_phone">Number Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="referral_code">Referral Code</string>
    <string name="register_now">Register Now</string>
    <string name="you_have_an_account_login">You have an account? Login</string>
    <string name="verify_number">Verify Phone Number</string>
    <string name="submit">Submit</string>
    <string name="resend"><font size="14">Resend</font></string>
    <string name="text"><font size="14">Text></font></string>
    <string name="phone_number"><font size="14">Phone Number</font></string>
    <string name="ok"><font size="14">OK></font></string>
    <string name="you_are_resetting_your_password_n_please_enter_otp_code_we_sent_to_your_sms">You are resetting your password \n Please enter OTP code we sent to your SMS</string>
    <string name="enter_new_password"><font size="14">Enter new password</font></string>
    <string name="conform_password"><font size="14">Conform Password</font></string>
    <string name="password"><font size="14">Password</font></string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="gmail">xuantrungsns@gmail.com</string>

    <string name="laundry_pick_upp">Laundry Pick Up</string>
    <string name="online_shopping">Online Shopping</string>
    <string name="top_up">Top Up</string>
    <string name="orders">Orders</string>
    <string name="rewards">Rewards</string>
    <string name="my_cards">My Cards</string>
    <string name="pricing">Pricing</string>
    <string name="setting">Setting</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log out</string>
    <string name="what_do_you_like_to_do_today">What do you like to do today?</string>
    <string name="drop_off">Drop Off</string>
    <string name="active_cards">Active Cards</string>
    <string name="s_25_30">S$25.30</string>
    <string name="pick_up">Pick Up</string>
    <string name="shop">Shop</string>
    <string name="_2300_more_points_to_gold">2300 more points to Gold</string>
    <string name="active_orders_4">Active Orders (4)</string>
    <string name="nguyen_trung">NGUYEN TRUNG</string>
    <string name="x123456">X123456</string>
    <string name="balance">Balance</string>
    <string name="s_0_3">S$0.3</string>
    <string name="vouchers">Vouchers</string>
    <string name="_4">4</string>
    <string name="points">Points</string>
    <string name="my_account">My Account</string>
    <string name="change_password">Change Password</string>
    <string name="my_order">My Order</string>
    <string name="my_addresses">My Addresses</string>
    <string name="mr_leo">MR Leo</string>
    <string name="phone">Phone</string>
    <string name="_65_768_738">+65 768 738</string>
    <string name="verify">Verify</string>
    <string name="leon11">Leon11</string>
    <string name="mrleo_gmail_com">mrleo@gmail.com</string>
    <string name="dob">DOB</string>
    <string name="change">Change</string>
    <string name="_01234567">+01234567</string>
    <string name="name">Name</string>
    <string name="address_name">Address Name</string>
    <string name="address">Address</string>
    <string name="company">Company</string>
    <string name="lock_no_3_36_hong_kong_street">Lock No.3, 36 Hong Kong street</string>
    <string name="choose_default_address">Choose default address</string>
    <string name="delete_address">Delete address</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="classification">Classification</string>
    <string name="search">Search</string>
    <string name="group">Group</string>
    <string name="everyday_pink">Everyday Pink</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="browse">Browse</string>
    <string name="my_rewards">My rewards</string>
    <string name="membership_tier_sliver">Membership Tier: Sliver</string>
    <string name="_2300">2300</string>
    <string name="vail_till_5_december_2024">Vail till 5 December 2024</string>
    <string name="free_5_items">Free 5 items</string>
    <string name="_200">200</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur">Lorem ipsum dolor sit amet, consectetur</string>
    <string name="refer_a_friend">Refer a friend</string>
    <string name="jun_01_2018_dec_31_2019">Jun 01,2018 Dec-31,2019</string>
    <string name="document">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor quam faucibus ornare imperdiet. Aliquam vel tempus risus. Vivamus consectetur placerat congue. Fusce faucibus dolor neque, ut congue erat tincidunt non. Aenean fringilla purus ac sapien scelerisque scelerisque. Integer ac sollicitudin erat, et aliquam erat. Nunc vitae hendrerit mauris. Suspendisse erat odio, congue nec dapibus et, pretium vitae ante. In eget feugiat arcu. Nam non lorem quis risus commodo bibendum quis id leo. Nam tincidunt enim sit amet massa mollis pellentesque a vitae enim. Maecenas egestas mi lobortis tellus pulvinar, a ultricies enim tincidunt. Pellentesque non malesuada felis. Nullam tempus faucibus sem.</string>
    <string name="user">User</string>
    <string name="sliver">Sliver</string>
    <string name="redeemable_points">Redeemable Points</string>
    <string name="points_history">Points History</string>
    <string name="how_do_i_earn_points">How do I earn points?</string>
    <string name="_5">5</string>
    <string name="detail">Detail</string>
    <string name="member">Member</string>
    <string name="gold">Gold</string>
    <string name="platinum">Platinum</string>
    <string name="gold_privileges">Gold Privileges</string>
    <string name="learn_more">Learn more</string>
    <string name="tier_progress">Tier Progress</string>
    <string name="_2300_more_points_to_gold_unlock">2300 more points to Gold unlock</string>
    <string name="earned_points">Earned Points</string>
    <string name="spent_points">Spent Points</string>
    <string name="order_no_065197556865">Order No: 065197556865</string>
    <string name="_18_28_27_nov_2018">18:28 27 Nov, 2018</string>
    <string name="laundry_order">Laundry Order</string>
    <string name="_20_points">+ 20 points</string>
</resources>