<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/laundry_pick_upp" />
        <item
            android:id="@+id/nav_laundry_pick_up"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/laundry_pick_upp" />
        <item
            android:id="@+id/nav_online_shopping"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/online_shopping" />
        <item
            android:id="@+id/nav_top_up"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/top_up" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/rewards" />
        <item
            android:id="@+id/nav_my_cards"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/my_cards" />
        <item
            android:id="@+id/nav_pricing"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/pricing" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/log_out" />
    </group>
</menu>