<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="132dp"
        android:layout_height="137.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="18.4dp"
        android:src="@drawable/ollo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/register"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="156dp"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/edt_full_name_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="205dp"
        android:paddingStart="10dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/name"
        android:hint="@string/full_name"
        android:background="@drawable/edt_shape"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/edt_user_name_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="255dp"
        android:paddingStart="10dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/user_name"
        android:background="@drawable/edt_shape"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/edt_email_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="305dp"
        android:paddingStart="10dp"
        android:drawablePadding="5dp"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_email"
        android:background="@drawable/edt_shape"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/edt_number_phone_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="355dp"
        android:paddingStart="15dp"
        android:drawablePadding="5dp"
        android:hint="@string/number_phone"
        android:drawableStart="@drawable/ic_phone"
        android:background="@drawable/edt_shape"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/edt_password_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="405dp"
        android:paddingStart="10dp"
        android:hint="@string/password"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_key"
        android:background="@drawable/edt_shape"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/edt_confirm_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="455dp"
        android:paddingStart="10dp"
        android:drawablePadding="5dp"
        android:hint="@string/confirm_password"
        android:drawableStart="@drawable/ic_padlock"
        android:background="@drawable/edt_shape"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/edt_code_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="505dp"
        android:paddingStart="10dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_barscode"
        android:hint="@string/referral_code"
        android:background="@drawable/edt_shape"
        tools:ignore="RtlSymmetry" />
    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/btn_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="570dp"
        android:background="@drawable/btn_shape"
        android:text="@string/register_now"
        android:textStyle="normal"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/you_have_an_account_login"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        android:layout_marginTop="628dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>