<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyAccountActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_color_start"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/img_user"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:src="@drawable/image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"/>
    <ImageView
        android:layout_width="21dp"
        android:layout_height="17dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/img_user"
        app:layout_constraintStart_toEndOf="@id/img_user"
        android:src="@drawable/camera"
        android:layout_marginTop="139dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/mr_leo"
        android:layout_marginTop="167dp"
        android:textSize="20dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="245dp"
        android:layout_marginStart="40dp">
        <TextView
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="14sp"
            android:textColor="@color/text_color" />
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_65_768_738"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_marginStart="50dp"/>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_marginStart="90dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="285dp"
        android:layout_marginStart="40dp">
        <TextView
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="14sp"
            android:textColor="@color/text_color" />
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mr_leo"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_marginStart="50dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="325dp"
        android:layout_marginStart="40dp">
        <TextView
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="14sp"
            android:textColor="@color/text_color" />
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leon11"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_marginStart="50dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="365dp"
        android:layout_marginStart="40dp">
        <TextView
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="14sp"
            android:textColor="@color/text_color" />
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mrleo_gmail_com"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_marginStart="50dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="405dp"
        android:layout_marginStart="40dp">
        <TextView
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:textSize="14sp"
            android:textColor="#989494" />
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="27/11/1991"
            android:textSize="14sp"
            android:textColor="#989494"
            android:layout_marginStart="50dp"/>
    </LinearLayout>
    <Button
        android:layout_width="328dp"
        android:layout_height="47dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/btn_shape"
        android:layout_marginTop="500dp"
        android:text="@string/change"
        android:textColor="@color/white"/>

    

</androidx.constraintlayout.widget.ConstraintLayout>