<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditAddressActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_color_start"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edt_shape"
        android:layout_marginTop="75dp"
        android:drawableStart="@drawable/ic_barscode"
        android:paddingStart="15dp"
        android:drawablePadding="10dp"
        android:text="@string/company"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/edt_shape"
        android:drawableStart="@drawable/ic_barscode"
        android:drawablePadding="10dp"
        android:paddingStart="15dp"
        android:text="@string/mr_leo"
        android:layout_marginTop="132dp"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="191dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edt_shape"
        android:drawableStart="@drawable/ic_barscode"
        android:paddingStart="15dp"
        android:drawablePadding="10dp"
        android:text="@string/_65_768_738"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="248dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/edt_shape"
        android:drawableStart="@drawable/ic_barscode"
        android:paddingStart="15dp"
        android:drawablePadding="10dp"
        android:text="@string/lock_no_3_36_hong_kong_street"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/choose_default_address"
        android:layout_marginTop="330dp"
        android:layout_marginStart="17dp"/>
    <ImageView
        android:layout_width="20dp"
        android:layout_height="22dp"
        android:src="@drawable/garbage"
        android:layout_marginTop="378dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="17dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_address"
        android:layout_marginTop="382dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="54dp"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:background="@drawable/btn_shape"
        android:layout_marginTop="430dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>