<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoItemRewardsActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_color_start"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/img_info_item_rewards"
        android:scaleType="fitXY"
        android:src="@drawable/ollo_logo"
        android:layout_width="51dp"
        android:layout_height="51dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="84dp"
        android:layout_marginStart="54dp"/>
    <TextView
        android:id="@+id/tw_1_info_rewards"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toEndOf="@+id/img_info_item_rewards"
        android:layout_marginTop="79dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/text_color"
        android:text="@string/free_5_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="15dp"
        android:textSize="14sp"
        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur"
        app:layout_constraintStart_toStartOf="@+id/tw_1_info_rewards"
        app:layout_constraintTop_toBottomOf="@+id/tw_1_info_rewards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginStart="15dp"
        android:layout_marginTop="179dp"
        android:text="@string/refer_a_friend"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/jun_01_2018_dec_31_2019"
        android:layout_marginTop="201dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/document"
        android:layout_marginTop="236dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/user"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="328dp"
        android:layout_height="47dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>